--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,11 +49,9 @@
 }
 .container header .headerBottomWrapper {
   display: flex;
-  justify-content: space-around;
   align-items: center;
   background-color: #FFF;
   border-radius: 5px;
-  gap: 5px;
   height: 60px;
   padding: min(35px, 2%);
   margin-top: 20px;
@@ -78,6 +76,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 1;
   cursor: pointer;
   background-color: #5956E9;
   min-width: 72px;
@@ -89,8 +88,8 @@
 .container header .headerBottomWrapper span .headerBottomWrapperNavBarDownloadButton a {
   text-decoration: none;
   color: #FFF;
-  margin: 2px;
-  font-size: min(20px, 1.5vw);
+  margin: 5px;
+  font-size: min(20px, 1.8vw);
 }
 .container header .headerBottomWrapper span .headerBottomWrapperNavBarDownloadButton:hover {
   background-color: #4745d8;
@@ -98,21 +97,26 @@
 .container header .headerBottomWrapper .menuLine {
   display: none;
 }
-.container header .headerBottomWrapper .headerBottomWrapperApollyButton {
+.container header .headerBottomWrapper .headerBottomWrapperApollyButtonContainer {
+  width: 100%;
+  padding-left: 5%;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+.container header .headerBottomWrapper .headerBottomWrapperApollyButtonContainer .headerBottomWrapperApollyButton {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #FFF;
   width: 12.5rem;
   height: 5.625rem;
-  flex-shrink: 0;
   border-radius: 0.3125rem;
 }
-.container header .headerBottomWrapper .headerBottomWrapperApollyButton a {
+.container header .headerBottomWrapper .headerBottomWrapperApollyButtonContainer .headerBottomWrapperApollyButton a {
   text-align: center;
-  width: 100%;
 }
-.container header .headerBottomWrapper .headerBottomWrapperApollyButton a img {
+.container header .headerBottomWrapper .headerBottomWrapperApollyButtonContainer .headerBottomWrapperApollyButton a img {
   width: 80%;
 }
 .container header a {
@@ -124,9 +128,9 @@
 .container main .homeSection {
   display: flex;
   justify-content: center;
-  gap: 20px;
+  gap: 40px;
   padding: 5%;
-  padding-top: 15%;
+  padding-top: 20vh;
   background-image: url("/src/assets/background/bg-img.svg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -163,6 +167,9 @@
   width: 75%;
 }
 .container main .homeSection .homeSectionRigthWrapper {
+  display: flex;
+  justify-content: center;
+  padding-left: 20%;
   width: 100%;
 }
 .container main .homeSection .homeSectionRigthWrapper img {
@@ -635,7 +642,7 @@
   font-weight: 400;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 780px) {
   .headerTopWrapper {
     display: none !important;
   }
@@ -645,7 +652,7 @@
   .headerBottomWrapper {
     height: 2.5rem !important;
   }
-  .headerBottomWrapper .headerBottomWrapperApollyButton {
+  .headerBottomWrapper .headerBottomWrapperApollyButtonContainer .headerBottomWrapperApollyButton {
     width: 6.25rem !important;
     height: 3.75rem !important;
   }
@@ -656,21 +663,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 40% !important;
-  }
-  .homeSection .homeSectionLeftWrapper .homeSectionLeftWrapperBoxContant {
-    width: 75%;
-    height: 85%;
-    top: 8%;
-    right: 20%;
-  }
-  .homeSection .homeSectionLeftWrapper img {
-    width: 80%;
-  }
-  .homeSection .homeSectionRigthWrapper {
-    display: flex;
-    justify-content: center;
-    padding-left: 20%;
   }
   .aboutSectionBottomContainer {
     flex-direction: column;
