--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -68,13 +68,10 @@ $gray-paragraphs-text-color: #6C6C72;
 
         .headerBottomWrapper {
             display: flex;
-            justify-content: space-around;
             align-items: center;
 
             background-color: #FFF;
             border-radius: 5px;
-
-            gap: 5px;
 
             height: 60px;
 
@@ -86,6 +83,7 @@ $gray-paragraphs-text-color: #6C6C72;
                 justify-content: space-around;
 
                 align-items: center;
+
                 gap: 20px;
 
                 .headerBottomWrapperNavBarButton {
@@ -108,6 +106,8 @@ $gray-paragraphs-text-color: #6C6C72;
                     align-items: center;
                     justify-content: center;
 
+                    flex-shrink: 1;
+
                     cursor: pointer;
 
                     background-color: $primary-color;
@@ -124,9 +124,9 @@ $gray-paragraphs-text-color: #6C6C72;
                         text-decoration: none;
                         color: #FFF;
 
-                        margin: 2px;
+                        margin: 5px;
 
-                        font-size: min(20px, 1.5vw);
+                        font-size: min(20px, 1.8vw);
                     }
 
                     &:hover {
@@ -139,27 +139,35 @@ $gray-paragraphs-text-color: #6C6C72;
                 display: none;
             }
 
-            .headerBottomWrapperApollyButton {
+            .headerBottomWrapperApollyButtonContainer {
+                width: 100%;
+
+                padding-left: 5%;
+
                 display: flex;
                 justify-content: center;
-                align-items: center;
 
-                background-color: #FFF;
+                position: relative;
 
-                width: 12.5rem;
-                height: 5.625rem;
+                .headerBottomWrapperApollyButton {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
 
-                flex-shrink: 0;
+                    background-color: #FFF;
 
-                border-radius: .3125rem;
 
-                a {
-                    text-align: center;
+                    width: 12.5rem;
+                    height: 5.625rem;
 
-                    width: 100%;
+                    border-radius: .3125rem;
 
-                    img {
-                        width: 80%;
+                    a {
+                        text-align: center;
+
+                        img {
+                            width: 80%;
+                        }
                     }
                 }
             }
@@ -177,10 +185,10 @@ $gray-paragraphs-text-color: #6C6C72;
             display: flex;
             justify-content: center;
 
-            gap: 20px;
+            gap: 40px;
 
             padding: 5%;
-            padding-top: 15%;
+            padding-top: 20vh;
 
             background-image: url("/src/assets/background/bg-img.svg");
             background-size: cover;
@@ -238,6 +246,11 @@ $gray-paragraphs-text-color: #6C6C72;
             }
 
             .homeSectionRigthWrapper {
+                display: flex;
+                justify-content: center;
+
+                padding-left: 20%;
+
                 width: 100%;
 
                 img {
@@ -900,7 +913,9 @@ $gray-paragraphs-text-color: #6C6C72;
             }
         }
     }
+
 }
+
 
 .gray-paragraphs {
     color: $gray-paragraphs-text-color;
@@ -915,7 +930,7 @@ $gray-paragraphs-text-color: #6C6C72;
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 780px) {
     .headerTopWrapper {
         display: none !important;
     }
@@ -927,9 +942,12 @@ $gray-paragraphs-text-color: #6C6C72;
     .headerBottomWrapper {
         height: 2.5rem !important;
 
-        .headerBottomWrapperApollyButton {
-            width: 6.25rem !important;
-            height: 3.75rem !important;
+        .headerBottomWrapperApollyButtonContainer {
+
+            .headerBottomWrapperApollyButton {
+                width: 6.25rem !important;
+                height: 3.75rem !important;
+            }
         }
     }
 
@@ -941,31 +959,6 @@ $gray-paragraphs-text-color: #6C6C72;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-
-        padding-top: 40% !important;
-
-        .homeSectionLeftWrapper {
-            .homeSectionLeftWrapperBoxContant {
-                width: 75%;
-                height: 85%;
-
-                top: 8%;
-                right: 20%;
-            }
-
-            img {
-                width: 80%;
-            }
-        }
-
-        .homeSectionRigthWrapper {
-            display: flex;
-            justify-content: center;
-
-            padding-left: 20%;
-        }
-
-
     }
 
     .aboutSectionBottomContainer {
