fix: img path problem fixed

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -190,7 +190,7 @@ $gray-paragraphs-text-color: #6C6C72;
             padding: 5%;
             padding-top: 20vh;
 
-            background-image: url("/src/assets/background/bg-img.svg");
+            background-image: url("../assets/background/bg-img.svg");
             background-size: cover;
             background-repeat: no-repeat;
 
@@ -319,7 +319,7 @@ $gray-paragraphs-text-color: #6C6C72;
             align-items: center;
             text-align: center;
 
-            background-image: url("/src/assets/background/bg-img.svg");
+            background-image: url("../assets/background/bg-img.svg");
             background-size: cover;
 
             color: #FFF;
@@ -516,7 +516,7 @@ $gray-paragraphs-text-color: #6C6C72;
                 width: 100%;
                 min-height: 45vh;
 
-                background-image: url("/src/assets/background/bg-img.svg");
+                background-image: url("../assets/background/bg-img.svg");
                 background-size: cover;
 
                 p {
@@ -584,7 +584,7 @@ $gray-paragraphs-text-color: #6C6C72;
 
             padding: 5%;
 
-            background-image: url(/src/assets/background/bg-img.svg);
+            background-image: url("../assets/background/bg-img.svg");
             background-size: cover;
 
             color: #FFF;
